--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
+
+    <div class="loading-bar"></div>
+
+    <!-- <div class="point point-0">
+        <div class="label">1</div>
+        <div class="text">An iconic Swedish car of the 1980's</div>
+    </div>
+    <div class="point point-1">
+        <div class="label">2</div>
+        <div class="text">This is a rally legend of its time.</div>
+    </div>
+    <div class="point point-2">
+        <div class="label">3</div>
+        <div class="text">Boxy but good</div>
+    </div> -->
+
 </body>
 </html>
