Added fixed text point

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 
     <div class="loading-bar"></div>
 
-    <!-- <div class="point point-0">
+    <div class="point point-0 visible">
         <div class="label">1</div>
         <div class="text">An iconic Swedish car of the 1980's</div>
     </div>
-    <div class="point point-1">
+    <!-- <div class="point point-1">
         <div class="label">2</div>
         <div class="text">This is a rally legend of its time.</div>
     </div>
