Added fixed point texts

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,16 @@
 
     <div class="point point-0 visible">
         <div class="label">1</div>
-        <div class="text">An iconic Swedish car of the 1980's</div>
+        <div class="text">The Swedish Tank of the 80's</div>
     </div>
-    <!-- <div class="point point-1">
+    <div class="point point-1 visible">
         <div class="label">2</div>
-        <div class="text">This is a rally legend of its time.</div>
+        <div class="text">It's a Turbo Brick</div>
     </div>
-    <div class="point point-2">
+    <div class="point point-2 visible">
         <div class="label">3</div>
         <div class="text">Boxy but good</div>
-    </div> -->
+    </div>
 
 </body>
 </html>
